# aparatchi

./: Cargo.toml  README.md
src/: db.rs  main.rs  models.rs  pattern.rs  vlc.rs
ui/: app.slint
