[package]
name = "aparatchi"
version = "0.1.0"
edition = "2021"
description = "Local movie/series watchlist manager with VLC playback + resume support"

[[bin]]
name = "aparatchi"
path = "src/main.rs"

[dependencies]
# UI toolkit
slint = "1.7"

# SQLite storage. "bundled" compiles sqlite3 in, so no system libsqlite3 is required.
rusqlite = { version = "0.31", features = ["bundled"] }

# Native "open file" dialog used by the Add/Edit forms.
rfd = "0.14"

# Used to talk to VLC's built-in HTTP interface (play/pause/seek/status) and to
# verify generated episode URLs actually resolve (HEAD request).
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# App data directory resolution (where movies.db lives).
directories = "5"

anyhow = "1"
rand = "0.8"

# Windows registry lookup, used only to auto-detect where VLC installed
# itself (SOFTWARE\VideoLAN\VLC). Not compiled in on other platforms.
[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[build-dependencies]
slint-build = "1.7"
